welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:6: error: ';' expected but 'else' found.
}else return false}
 ^nearHundred:10: error: Unmatched closing brace '}' ignored here
 }
 ^